--- a/Designa/Designa.csproj
+++ b/Designa/Designa.csproj
@@ -7,8 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.11" />
+    <PackageReference Include="iTextSharp.LGPLv2.Core" Version="3.4.17" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.12" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="sautinsoft.rtftohtml" Version="2023.10.18" />
   </ItemGroup>
 
 </Project>
