--- a/Designa/appsettings.json
+++ b/Designa/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DesignaConection": "DataSource=Designa.db;Cache=Shared"
+  }
 }
