--- a/Designa/appsettings.json
+++ b/Designa/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DesignaConection": "DataSource=Designa.db;Cache=Shared"
-  }
+  },
+  "ItensToPage": 15
 }
