--- a/Designa/Designa.csproj
+++ b/Designa/Designa.csproj
@@ -3,6 +3,9 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>93f50537-fa60-43d6-b07a-c4631fd049c6</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="wwwroot\lib\bootstrap\dist\**" />
@@ -15,8 +18,10 @@
     <None Include="wwwroot\lib\bootstrap\js\bootstrap.min.js" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Aspose.Words" Version="24.8.0" />
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="iTextSharp.LGPLv2.Core" Version="3.4.20" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
     <PackageReference Include="sautinsoft.rtftohtml" Version="2024.6.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.6">
       <PrivateAssets>all</PrivateAssets>
